# plasma-simpleMonitor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Messages.sh  README.md  build.sh  clearLaunch.sh  install.sh  launch.sh  metadata.desktop  plasma-simpleMonitor.pro  uninstall.sh
contents/: main.qml  simpleMonitor.qmlproject
contents/code/: main.qml  simpleMonitor.qmlproject
contents/code/fonts/Michroma/: OFL.txt
contents/code/monitorWidgets/: CoreTempList.qml  CpuWidget.qml  DatePicker.qml  HighlightCpu.qml  MemArea.qml  OsInfoItem.qml  UptimePicker.qml
contents/code/monitorWidgets/js/: monitorActions.js
contents/config/: main.xml
contents/fonts/Play/: OFL.txt
contents/monitorWidgets/: DatePicker.qml
contents/ui/: config.ui
plasmoid/: metadata.desktop
plasmoid/contents/code/: code.js  monitorActions.js
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/fonts/Doppio_One/: OFL.txt
plasmoid/contents/ui/: config.ui  main.qml
plasmoid/contents/ui/components/: LogoImage.qml
translations/: CMakeLists.txt  Messages.sh  README.md  plasma_applet_org.kde.simpleMonitor.pot  translation.sh
translations/es/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.po
translations/es_ES/: es_ES.mo  es_ES.po
translations/eu_ES/: eu_ES.mo  eu_ES.po
translations/fr/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/hr/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/hu/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/pl/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/ru/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/tr/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/zh_CN/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
(+17 files in other folders)
